--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 		<version>1.3.4.RELEASE</version>
 	</parent>
 
+	<properties>
+		<start-class>org.test.web.WebTestMain</start-class>
+		<main.basedir>${basedir}/../..</main.basedir>
+		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
+	</properties>
 
 	<dependencies>
 		<dependency>
